[gd_scene load_steps=10 format=2]

[ext_resource path="res://scene/Home/Ball/Ball.gd" type="Script" id=1]
[ext_resource path="res://image/boul.png" type="Texture" id=2]
[ext_resource path="res://image/ball2.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=5]
friction = 0.0
bounce = 0.56

[sub_resource type="CircleShape2D" id=1]
radius = 33.5

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("BallSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodySprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "rtn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BallSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodySprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Curve" id=19]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.688525, 0.973864 ), 0.0, 0.0, 0, 0, Vector2( 0.991803, 0.0102272 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=20]
offsets = PoolRealArray( 0, 0.180758, 0.35277, 1 )
colors = PoolColorArray( 1, 0.980469, 0.980469, 1, 2, 2, 2, 0.49, 1.39623, 1.39623, 1.39623, 1, 1, 1, 1, 0.51 )

[node name="Ball" type="RigidBody2D" groups=["ball", "damage"]]
position = Vector2( 1477, 416 )
collision_mask = 12
mass = 0.420408
physics_material_override = SubResource( 5 )
gravity_scale = 4.0
contacts_reported = 1
contact_monitor = true
applied_torque = -800000.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BodySprite" type="Sprite" parent="."]
modulate = Color( 1, 0.231373, 0.231373, 1 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="SkillBall" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 17 )
anims/rtn = SubResource( 18 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
modulate = Color( 3, 3, 3, 1 )
emitting = false
amount = 16
lifetime = 0.4
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 60.0
spread = 56.37
gravity = Vector2( 0, 0 )
orbit_velocity = 0.7
orbit_velocity_random = 1.0
radial_accel = 60.0
scale_amount = 3.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 19 )
color_ramp = SubResource( 20 )

[node name="DurationTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
